fixed overflow

--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body{
     background-color: black;
     box-sizing: border-box;
     color: white;
-    overflow: hidden;
+    overflow: auto;
 }
 
 @font-face {
